Fix findFirstFreeNumber